[metadata]
name = spacetomo

description = SPACEtomo
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eisfabian/SPACEtomo
author = Fabian Eisenstein
author_email = null
license = GPLv3
license_files = LICENSE
classifiers =
    License :: OSI Approved :: GPLv3 License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/eisfabian/SPACEtomo/issues
    Documentation = https://github.com/eisfabian/SPACEtomo#README.md
    Source Code = https://github.com/eisfabian/SPACEtomo
    User Support = https://github.com/eisfabian/SPACEtomo

[options]
packages = find:
install_requires = file: requirements.txt

python_requires = >=3.9
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

# [options.entry_points]
# napari.manifest =
    # napari-spacetomo = napari_spacetomo:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
